--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="visualisation-1/visualisation-1.html">Covid Map</a>
                         <a class="dropdown-item" href="visualisation-2/visualisation-2.html">Visualisation 2</a>
-                        <a class="dropdown-item" href="visualisation-3/visualisation-3.html">Visualisation 3</a>
+                        <a class="dropdown-item" href="visualisation-3/visualisation-3.html">Highest Figures</a>
                         <a class="dropdown-item" href="http://127.0.0.1:5000/">API</a>
                     </div>
                 </li>
@@ -56,10 +56,10 @@
                 <img src="Images/Fig2.png" class="rounded float-left thumbnail" alt="Image 2" width="500" height="200">
             </a>
             <a href="visualisation-3/visualisation-3.html">
-                <img src="Images/Fig3.png" class="rounded float-left thumbnail" alt="Image 3" width="500" height="200">
+                <img src="Images/Fig3.png" class="rounded float-left thumbnail" alt="Highest Figures" width="500" height="200">
             </a>
             <a href="http://127.0.0.1:5000/">
-                <img src="Images/Fig4.png" class="rounded float-left thumbnail" alt="Image 4" width="500" height="200">
+                <img src="Images/Fig4.png" class="rounded float-left thumbnail" alt="API" width="500" height="200">
             </a>
         </div>
     </div>
