--- a/templates/visualisation-1/visualisation-1.html
+++ b/templates/visualisation-1/visualisation-1.html
@@ -39,7 +39,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="../visualisation-1/visualisation-1.html">Covid Map</a>
                     <a class="dropdown-item" href="../visualisation-2/visualisation-2.html">Visualisation 2</a>
-                    <a class="dropdown-item" href="../visualisation-3.html">Visualisation 3</a>
+                    <a class="dropdown-item" href="../visualisation-3.html">Highest Figures</a>
                     <a class="dropdown-item" href="http://127.0.0.1:5000/">API</a>
                 </div>
             </li>
