--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="visualisation-1/visualisation-1.html">Covid Map</a>
-                        <a class="dropdown-item" href="visualisation-2/visualisation-2.html">Visualisation 2</a>
+                        <a class="dropdown-item" href="visualisation-2/visualisation-2.html">Daily Information</a>
                         <a class="dropdown-item" href="visualisation-3/visualisation-3.html">Highest Figures</a>
                         <a class="dropdown-item" href="http://127.0.0.1:5000/">API</a>
                     </div>
@@ -53,7 +53,7 @@
                 <img src="Images/Fig1.png" class="rounded float-left thumbnail" alt="Covid Map" width="500" height="200">
             </a>
             <a href="visualisation-2/visualisation-2.html">
-                <img src="Images/Fig2.png" class="rounded float-left thumbnail" alt="Image 2" width="500" height="200">
+                <img src="Images/Fig2.png" class="rounded float-left thumbnail" alt="Daily Information" width="500" height="200">
             </a>
             <a href="visualisation-3/visualisation-3.html">
                 <img src="Images/Fig3.png" class="rounded float-left thumbnail" alt="Highest Figures" width="500" height="200">
