--- a/templates/visualisation-3/visualisation-3.html
+++ b/templates/visualisation-3/visualisation-3.html
@@ -34,7 +34,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="../visualisation-1/visualisation-1.html">Covid Map</a>
-                    <a class="dropdown-item" href="../visualisation-2/visualisation-2.html">Visualisation 2</a>
+                    <a class="dropdown-item" href="../visualisation-2/visualisation-2.html">Daily Information</a>
                     <a class="dropdown-item" href="../visualisation-3/visualisation-3.html">Highest Figures</a>
                     <a class="dropdown-item" href="http://127.0.0.1:5000/">API</a>
                 </div>
